# ETFTools

./: .dockerignore  .env.docker.example  .gitignore  .remote-config.template.json  AGENT.md  AGENTS.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CODE_NAVIGATION.md  Dockerfile  PLAN.md  README-Docker-Multiarch.md  README-Docker.md  README.md  RESEARCH.md  build-multiarch.sh  docker-compose.yml  docker-login.sh  manage.sh  package-lock.json  package.json  pyproject.toml
backend/: .env.example  pyproject.toml  requirements.txt  seed_data.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  config_loader.py  database.py  encryption.py  init_admin.py  logging_config.py  metrics.py  share_history_database.py
backend/app/data/: etf_fallback.json  etf_index_map.json  etf_index_map_new.json  index_database.json  metrics_config.json
backend/app/middleware/: rate_limit.py
backend/app/models/: alert_config.py  etf_share_history.py  price_alert.py  system_config.py  user.py
backend/app/services/: admin_alert_service.py  akshare_service.py  alert_scheduler.py  alert_service.py  alert_state_service.py  auth_service.py  baostock_service.py  compare_service.py  datasource_manager.py  datasource_protocol.py  eastmoney_history_source.py  etf_classifier.py  fund_flow_cache_service.py  fund_flow_collector.py  fund_flow_service.py  grid_service.py  metrics_service.py  notification_service.py  price_alert_service.py  share_history_backup_service.py  trend_service.py  (+6 more)
backend/data/: classification_results.csv
backend/scripts/: backfill_sse_share_history.py  create_admin.py  etf_index_mapper.py  freeze_requirements.sh  generate_secret.py  init_share_history_table.py  migrate_add_admin_fields.py  test_classifier_coverage.py  validate_classifier.py
backend/tests/: __init__.py  conftest.py
(+205 files in other folders)
