[project]
name = "etftool-backend"
version = "0.1.0"
description = "FastAPI backend for ETFTool"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "akshare>=1.12.0,<2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "sqlmodel>=0.0.14",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "diskcache>=5.6.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "baostock>=0.8.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.25.0",
    "ipython>=8.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]


[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
